{
  "back": "Back",
  "cpf": "CPF",
  "email": "Email",
  "endDateTime": "End Date Time",
  "get.started": "Get Started",
  "home": {
    "header.title": "Welcome to Notes",
    "header.subtitle": "Greate nice day for managing Task",
    "home": "Home"
  },
  "add.task": {
    "header.title": "Create New Task"
  },
  "description": "Description",
  "doing": "Doing",
  "done": "Done",
  "select.date": "Select the date",
  "select.time": "Select time",
  "priority": "Priority",
  "task-list.title": "My Task List",
  "tittle.task": "Tittle Task",
  "note": "Note",
  "not.reminded": "Waiting",
  "from": "From",
  "to": "To",
  "high": "HIGH",
  "medium": "MEDIUM",
  "low": "LOW",
  "at": "At",
  "reminder": "Reminder",
  "title": "Title",
  "todo": "Todo",
  "name": "Name",
  "error": {
    "validation": {
      "password": "Password must have at least 8 chars and contains letters and numbers",
      "min": "must have at leats 1 character",
      "email": "input a valid email",
      "cpf": "input a valid cpf"
    },
    "form": {
      "wrong.data": "Wrong data"
    },
    "list": {
      "task": "Failed on get tasks"
    }
  },
  "startDateTime": "Start Date Time",
  "submit": "Confirm",
  "success": "Success",
  "sign.in": "Sign In",
  "password": "Password",
  "welcome.title": "Let's Organize Your Node TODO",
  "welcome.message": "Make your todo in the note and manage your priority activity in daily life to achieve goals.",
  "welcome.already.account": "Already have an account?"
}
